--- a/lattice-draft.tex
+++ b/lattice-draft.tex
@@ -29,6 +29,8 @@
 \newcommand{\Jc}{\mathcal{J}}
 \newcommand{\Cc}{\mathcal{C}}
 
+\newcommand{\band}{\mathbin{\&\&}}
+\newcommand{\bor}{\mathbin{||}}
 
 \title[Idempotent Distributive Lattice Completion]{The Idempotent Distributive Lattice Completion of a (finite) Partial Order and Some Applications}
 \author{Gershom Bazerman}
@@ -56,7 +58,7 @@ In section 2, we introduce the main result of the paper, the idempotent distribu
 
 We introduce here some basic facts and notation regarding order theory, lattices, and locales. The material through Birkhoff's duality theorem is made use of immediately. The subsequent material discusses locale theory and will be made use of slightly later. [Cite Priestly! then for locales cite...]  [Cite Johnstone, M\&M, Vickers!]
 
-A \textbf{partially ordered set} or poset, \(P\) is a set equipped with a partial order relation \(\le\), which is transitive,  reflexive, and antisymmetric (i.e. for which \( a \le b \mathbin{\&\&} b \le a \implies a = b\)). A (homo)morphism of posets is an monotone (order-preserving) function on their elements, and with such morphisms posets form the category \(Pos\) and finite posets form the subcategory \(FinPos\). Two posets are equivalent when there exist morphisms \(f, g\) between them such that \(f \odot g = id\) and \(g \odot f = id\), i.e. when they are equivalent as objects of \(Pos\). We note that all posets have a standard partial order on them such that \(P \le Q\) when there exists an order-preserving embedding \(P \rightarrow Q\).
+A \textbf{partially ordered set} or poset, \(P\) is a set equipped with a partial order relation \(\le\), which is transitive,  reflexive, and antisymmetric (i.e. for which \( a \le b \band b \le a \implies a = b\)). A (homo)morphism of posets is an monotone (order-preserving) function on their elements, and with such morphisms posets form the category \(Pos\) and finite posets form the subcategory \(FinPos\). Two posets are equivalent when there exist morphisms \(f, g\) between them such that \(f \odot g = id\) and \(g \odot f = id\), i.e. when they are equivalent as objects of \(Pos\). We note that all posets have a standard partial order on them such that \(P \le Q\) when there exists an order-preserving embedding \(P \rightarrow Q\).
 
 A \textbf{lattice}, \(L\) is partially ordered set for which every two elements have a unique greatest lower bound, their \textbf{meet} (\(\wedge\)) and a unique least upper bound, their \textbf{join} (\(\vee\)). The join and meet operations of a lattice are necessarily commutative, associative, and idempotent. A (homo)morphism of distributive lattices is a morphism of posets which also preserves meets and joins. A \textbf{join-semilattice} and \textbf{meet-semilattice} are posets that respectively have all finite joins or all finite meets. A \textbf{complete lattice} is a lattice which has joins and meets of infinitary as well as finitary collections of elements. We write \(\bigwedge\) and \(\bigvee\) for the meet and join operations as applied to an entire set of elements. By abuse of notation, we also may write, e.g., \(x \vee S\) where \(x\) is an element of a poset and \(S\) is a set of elements, to indicate the lifting of application of the unary operation \(x \vee -\) to every element in the set.
 
@@ -64,7 +66,7 @@ A \textbf{distributive lattice}, is a lattice satisfying the additional property
 
 A \textbf{join-irreducible} element of a poset is an element \(x\) such that no collection of elements not including \(x\) has \(x\) as its join. The operation \(\Jc(P)\) sends a poset (or a lattice viewed as a poset) to the sub-poset of its join-irreducible elements, sharing the same order relation. An intuition that this lends itself to is that join-irreducible elements are ideals. We refer to elements of a poset which are not join-irreducible as \textbf{composite} elements, and the set of join-irreducible elements which joins to them as their \textbf{basis}. It is important to note that if a poset has a globally least element (i.e. element which stands below all other elements in the order relation), that element is not join-irreducible, since it is the join of the empty set. However, if a poset has more than one locally least element (i.e. element with no element below it), then all such elements are join-irreducible. It is also important to note that even if an element is join-irreducible in \(P\), it still may nonetheless become a join in the restriction to \(\Jc(P)\).
 
-A \textbf{downset} of a poset is a set of elements of the poset which is downwardly-closed -- i.e. for which \(x \in S \mathbin{\&\&} y \le x \implies y \in S\). The operation \(\Oc(P)\) sends a poset to the poset of its downsets, ordered by inclusion. Such a poset has meets and joins as respectively intersection and union, and consequently is a distributive lattice. Further, \(\Oc(P)\) is a morphism (and in fact an embedding) of posets, which sends each \(x \in P\) to the set \(\{y \mathbin{|} y \le x\}\).
+A \textbf{downset} of a poset is a set of elements of the poset which is downwardly-closed -- i.e. for which \(x \in S \band y \le x \implies y \in S\). The operation \(\Oc(P)\) sends a poset to the poset of its downsets, ordered by inclusion. Such a poset has meets and joins as respectively intersection and union, and consequently is a distributive lattice. Further, \(\Oc(P)\) is a morphism (and in fact an embedding) of posets, which sends each \(x \in P\) to the set \(\{y \mathbin{|} y \le x\}\).
 
 \textbf{Thm. (Birkhoff)}: When L is a finite distributive lattice, \(\Oc(\Jc(L)))\) is an equivalence, and for any finite poset P,  \(\Jc(\Oc(P)))\) is an equivalence. Further, this equivalence extends to a functorial equivalence between the categories \(FinPos\) and \(FinDLat\), with monotone functions on posets corresponding to homomorphisms of distributive lattices.
 
